[project]
name = "matching-service"
version = "0.1.1"
description = "A matching service for the UofG SPA app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amply==0.1.6",
    "docutils==0.20.1",
    "fastapi[standard]>=0.115.5",
    "numpy==1.26.4",
    "pulp==2.9.0",
    "pyparsing==3.1.4",
    "uvicorn",
]
